kubernetes/apps/vaultwarden/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-route
spec:
  parentRefs:
    - name: gateway
      namespace: gateway-infra
  hostnames:
    - warden.salami.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: vaultwarden
          port: 80
